@@ -3,7 +3,7 @@
    THE FUNCTIONS IN THIS FILE ARE FOR INTERNAL USE AND ARE ALMOST CERTAIN TO
    BE SUBJECT TO INCOMPATIBLE CHANGES IN FUTURE GNU MP RELEASES.
 
-Copyright 2000, 2005, 2011 Free Software Foundation, Inc.
+Copyright 2000, 2005, 2011, 2012 Free Software Foundation, Inc.
 
 This file is part of the GNU MP Library.
 
@@ -52,9 +52,8 @@ mpz_divexact_by3 (mpz_ptr q, mpz_srcptr a)
   mp_size_t  abs_size = ABS(size);
   mp_ptr     qp;
 
-  MPZ_REALLOC (q, abs_size);
+  qp = MPZ_REALLOC (q, abs_size);
 
-  qp = PTR(q);
   mpn_bdiv_dbm1 (qp, PTR(a), abs_size, GMP_NUMB_MASK / 3);
 
   abs_size -= (qp[abs_size-1] == 0);
@@ -70,9 +69,8 @@ mpz_divexact_by5 (mpz_ptr q, mpz_srcptr a)
   mp_size_t  abs_size = ABS(size);
   mp_ptr     qp;
 
-  MPZ_REALLOC (q, abs_size);
+  qp = MPZ_REALLOC (q, abs_size);
 
-  qp = PTR(q);
   mpn_bdiv_dbm1 (qp, PTR(a), abs_size, GMP_NUMB_MASK / 5);
 
   abs_size -= (qp[abs_size-1] == 0);
@@ -87,9 +85,8 @@ mpz_divexact_limb (mpz_ptr q, mpz_srcptr a, mp_limb_t d)
   mp_size_t  abs_size = ABS(size);
   mp_ptr     qp;
 
-  MPZ_REALLOC (q, abs_size);
+  qp = MPZ_REALLOC (q, abs_size);
 
-  qp = PTR(q);
   mpn_divexact_1 (qp, PTR(a), abs_size, d);
 
   abs_size -= (qp[abs_size-1] == 0);
