@@ -1,6 +1,6 @@
 /* mpz_set (dest_integer, src_integer) -- Assign DEST_INTEGER from SRC_INTEGER.
 
-Copyright 1991, 1993, 1994, 1995, 2000 Free Software Foundation, Inc.
+Copyright 1991, 1993, 1994, 1995, 2000, 2012 Free Software Foundation, Inc.
 
 This file is part of the GNU MP Library.
 
@@ -30,9 +30,8 @@ mpz_set (mpz_ptr w, mpz_srcptr u)
   usize = SIZ(u);
   size = ABS (usize);
 
-  MPZ_REALLOC (w, size);
+  wp = MPZ_REALLOC (w, size);
 
-  wp = PTR(w);
   up = PTR(u);
 
   MPN_COPY (wp, up, size);
