@@ -1,7 +1,7 @@
 /* mpz_tdiv_qr(quot,rem,dividend,divisor) -- Set QUOT to DIVIDEND/DIVISOR,
    and REM to DIVIDEND mod DIVISOR.
 
-Copyright 1991, 1993, 1994, 2000, 2001, 2005, 2011 Free Software
+Copyright 1991, 1993, 1994, 2000, 2001, 2005, 2011, 2012 Free Software
 Foundation, Inc.
 
 This file is part of the GNU MP Library.
@@ -40,15 +40,13 @@ mpz_tdiv_qr (mpz_ptr quot, mpz_ptr rem, mpz_srcptr num, mpz_srcptr den)
   if (UNLIKELY (dl == 0))
     DIVIDE_BY_ZERO;
 
-  MPZ_REALLOC (rem, dl);
+  rp = MPZ_REALLOC (rem, dl);
 
   if (ql <= 0)
     {
       if (num != rem)
 	{
-	  mp_ptr np, rp;
 	  np = PTR (num);
-	  rp = PTR (rem);
 	  MPN_COPY (rp, np, nl);
 	  SIZ (rem) = SIZ (num);
 	}
@@ -58,11 +56,9 @@ mpz_tdiv_qr (mpz_ptr quot, mpz_ptr rem, mpz_srcptr num, mpz_srcptr den)
       return;
     }
 
-  MPZ_REALLOC (quot, ql);
+  qp = MPZ_REALLOC (quot, ql);
 
   TMP_MARK;
-  qp = PTR (quot);
-  rp = PTR (rem);
   np = PTR (num);
   dp = PTR (den);
 
